# MBAssignment

./: CMakeLists.txt  README.md
inc/: intentRecognition.hpp
src/: intentRecognition.cpp  main.cpp
